# mtc_pickplace

./: CMakeLists.txt  README.md  package.xml
config/: jaco_config.yaml  mtc.rviz  panda_config.yaml
launch/: demo2.launch  jaco_demo.launch  panda_demo.launch  pickplace.launch  pickplace2.launch  pointcloud_octamap_pub.launch
src/: main.cpp  main2.cpp  moveit_task_constructor_demo2.cpp  pick_place_task2.cpp
